# localllm

./: .gitignore  .nojekyll  CHANGELOG.md  DEV.md  LICENSE  README.md  example.html  index.html  pyproject.toml  quickstart.html  robots.txt  search.json  sitemap.xml  vb.py
.github/workflows/: ci.yaml  docs.yml  pypi.yml
doc/: _quarto.yml  example.qmd  index.qmd  quickstart.qmd
docs/: _quarto.yml  index.qmd
reference/: converters.convert_dspy_example.html  converters.tif.html  dspy.LocalChatAdapter.html  dspy.LocalLLM.html  dspy.dspy_signature_defaults.html  index.html  localllm_download_model.html  localllm_list_models.html  merge_spans.html  textmodel_gepa_classify.html  txt_locate.html  txt_locate_all.html  utilities.convert_dspy_example.html  utilities.tif.html
scripts/: DEV.md
scripts/dev/: textmodel_gepa_example.py
src/localllm/: __init__.py  config.py  data.py  dspy.py  models.py  textmodels.py  train_test.py  utils.py
src/localllm/utilities/: __init__.py  train_test.py
src/localllm/utils/: converters.py
