[project]
name = "localllm"
version = "0.2.0"
description = "Run a local LLM alongside dspy"
authors = [{ name = "Jan Wijffels", email = "jwijffels@bnosac.be" }]
maintainers = [{ name = "Jan Wijffels", email = "jwijffels@bnosac.be" }]
readme.file = "README.md"
readme.content-type = "text/markdown"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "dspy",
    "llama-cpp-python",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-cov",
    "ruff>=0.8.6",
    "quartodoc",
    "dspy",
    "llama-cpp-python",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["src", "tests"]
addopts = ["--import-mode=importlib", "-ra", "--doctest-modules"]

[tool.ruff]
line-length = 150
