[project]
name = "localllm"
version = "0.3.0"
description = "Run a local LLM alongside dspy"
authors = [{ name = "Jan Wijffels", email = "jwijffels@bnosac.be" }]
maintainers = [{ name = "Jan Wijffels", email = "jwijffels@bnosac.be" }]
readme.file = "README.md"
readme.content-type = "text/markdown"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "dspy>=3.0.0",
    "llama-cpp-python>=0.3.8",
    "importlib-resources>=1.3",
    "s3generics"
]

    


[project.optional-dependencies]
converters = [
    "pandas"
]

[dependency-groups]
doc = [
    "pyyaml", 
    "jupyterlab", 
    "jupytext", 
    "jupyter",  ## Quarto documentation
    "quartodoc",
    "griffe<0.49",
]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-cov",
    "ruff>=0.8.6",
    "dspy>=3.0.0",
    "llama-cpp-python>=0.3.8",
    "importlib-resources>=1.3",
    "s3generics",
    "pandas",
    { include-group = "doc"},
]

[tool.setuptools.package-data]
localllm = ["data/*.zip"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["src", "tests"]
addopts = ["--import-mode=importlib", "-ra", "--doctest-modules"]

[tool.ruff]
line-length = 150
